--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             ------------------------------------------------------- -->
 			<nav id="mainnav">
             	<ul>
-                	<li><a href="#work">Work</a></li>
+                	<li><a href="#work">WORK</a></li>
                     <li><a href="#about-contact">About</a></li>
                     <li><a href="#about-contact">Contact</a></li>
                 </ul>
